update:添加个别接口的swagger注释，更新readme
