# docs/swagger.json
@@ -1,13 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "test information",
+        "description": "Go Web 实战服务端接口文档",
         "title": "bluebell项目接口文档",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "万里",
-            "url": "https://github.com/2zyyyyy",
-            "email": "2zyyyyy4dev@gmail.com"
+            "url": "http://www.swagger.io/support",
+            "email": "support@swagger.io"
         },
         "license": {
             "name": "Apache 2.0",
@@ -15,7 +14,8 @@
         },
         "version": "1.0"
     },
-    "host": "http://127.0.0.1:8080",
+    "host": "127.0.0.1:8080",
+    "basePath": "/api/v1/",
     "paths": {
         "/community": {
             "get": {
@@ -58,6 +58,66 @@
                     }
                 }
             }
+        },
+        "/community/post/orderList": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "可按社区按时间或分数排序查询帖子列表接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "帖子相关接口"
+                ],
+                "summary": "升级版帖子列表接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "可以为空",
+                        "name": "community_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "排序依据",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "页码",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "每页数据量",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers._ResponsePostList"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -71,6 +131,26 @@
                 "data": {
                     "description": "数据",
                     "$ref": "#/definitions/models.CommunityDetail"
+                },
+                "message": {
+                    "description": "提示信息",
+                    "type": "string"
+                }
+            }
+        },
+        "controllers._ResponsePostList": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "description": "状态码",
+                    "type": "integer"
+                },
+                "data": {
+                    "description": "数据",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CommunityDetail"
+                    }
                 },
                 "message": {
                     "description": "提示信息",
