# models/params.go
@@ -24,10 +24,10 @@ type ParamLogin struct {
 
 // ParamOrderList 获取帖子列表
 type ParamOrderList struct {
-	Page        int64  `json:"page" form:"page"`
-	Size        int64  `json:"size" form:"size"`
-	Order       string `json:"order" form:"order"`
-	CommunityID int64  `json:"community_id" form:"community_id"`
+	Page        int64  `json:"page" form:"page"`                 // 页码
+	Size        int64  `json:"size" form:"size"`                 // 每页数据量
+	Order       string `json:"order" form:"order"`               // 排序依据
+	CommunityID int64  `json:"community_id" form:"community_id"` // 可以为空
 }
 
 // ParamCommunityPostList 社区下帖子列表的接口提
